; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/eth/extr_al_hal_eth_main.c_al_eth_fwd_mac_table_entry_to_val.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/eth/extr_al_hal_eth_main.c_al_eth_fwd_mac_table_entry_to_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_eth_fwd_mac_table_entry = type { i64, i32, i32, i64, i32, i64 }

@AL_TRUE = common dso_local global i64 0, align 8
@EC_FWD_MAC_CTRL_RX_VAL_DROP = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_RX_VAL_UDMA_SHIFT = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_RX_VAL_UDMA_MASK = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_RX_VAL_QID_SHIFT = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_RX_VAL_QID_MASK = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_RX_VALID = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_TX_VAL_SHIFT = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_TX_VAL_MASK = common dso_local global i32 0, align 4
@EC_FWD_MAC_CTRL_TX_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.al_eth_fwd_mac_table_entry*)* @al_eth_fwd_mac_table_entry_to_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @al_eth_fwd_mac_table_entry_to_val(%struct.al_eth_fwd_mac_table_entry* %0) #0 {
  %2 = alloca %struct.al_eth_fwd_mac_table_entry*, align 8
  %3 = alloca i32, align 4
  store %struct.al_eth_fwd_mac_table_entry* %0, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.al_eth_fwd_mac_table_entry*, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  %5 = getelementptr inbounds %struct.al_eth_fwd_mac_table_entry, %struct.al_eth_fwd_mac_table_entry* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @AL_TRUE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @EC_FWD_MAC_CTRL_RX_VAL_DROP, align 4
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %9
  %13 = phi i32 [ %10, %9 ], [ 0, %11 ]
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load %struct.al_eth_fwd_mac_table_entry*, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  %17 = getelementptr inbounds %struct.al_eth_fwd_mac_table_entry, %struct.al_eth_fwd_mac_table_entry* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @EC_FWD_MAC_CTRL_RX_VAL_UDMA_SHIFT, align 4
  %20 = shl i32 %18, %19
  %21 = load i32, i32* @EC_FWD_MAC_CTRL_RX_VAL_UDMA_MASK, align 4
  %22 = and i32 %20, %21
  %23 = load i32, i32* %3, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %3, align 4
  %25 = load %struct.al_eth_fwd_mac_table_entry*, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  %26 = getelementptr inbounds %struct.al_eth_fwd_mac_table_entry, %struct.al_eth_fwd_mac_table_entry* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @EC_FWD_MAC_CTRL_RX_VAL_QID_SHIFT, align 4
  %29 = shl i32 %27, %28
  %30 = load i32, i32* @EC_FWD_MAC_CTRL_RX_VAL_QID_MASK, align 4
  %31 = and i32 %29, %30
  %32 = load i32, i32* %3, align 4
  %33 = or i32 %32, %31
  store i32 %33, i32* %3, align 4
  %34 = load %struct.al_eth_fwd_mac_table_entry*, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  %35 = getelementptr inbounds %struct.al_eth_fwd_mac_table_entry, %struct.al_eth_fwd_mac_table_entry* %34, i32 0, i32 3
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @AL_TRUE, align 8
  %38 = icmp eq i64 %36, %37
  br i1 %38, label %39, label %41

39:                                               ; preds = %12
  %40 = load i32, i32* @EC_FWD_MAC_CTRL_RX_VALID, align 4
  br label %42

41:                                               ; preds = %12
  br label %42

42:                                               ; preds = %41, %39
  %43 = phi i32 [ %40, %39 ], [ 0, %41 ]
  %44 = load i32, i32* %3, align 4
  %45 = or i32 %44, %43
  store i32 %45, i32* %3, align 4
  %46 = load %struct.al_eth_fwd_mac_table_entry*, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  %47 = getelementptr inbounds %struct.al_eth_fwd_mac_table_entry, %struct.al_eth_fwd_mac_table_entry* %46, i32 0, i32 4
  %48 = load i32, i32* %47, align 8
  %49 = load i32, i32* @EC_FWD_MAC_CTRL_TX_VAL_SHIFT, align 4
  %50 = shl i32 %48, %49
  %51 = load i32, i32* @EC_FWD_MAC_CTRL_TX_VAL_MASK, align 4
  %52 = and i32 %50, %51
  %53 = load i32, i32* %3, align 4
  %54 = or i32 %53, %52
  store i32 %54, i32* %3, align 4
  %55 = load %struct.al_eth_fwd_mac_table_entry*, %struct.al_eth_fwd_mac_table_entry** %2, align 8
  %56 = getelementptr inbounds %struct.al_eth_fwd_mac_table_entry, %struct.al_eth_fwd_mac_table_entry* %55, i32 0, i32 5
  %57 = load i64, i64* %56, align 8
  %58 = load i64, i64* @AL_TRUE, align 8
  %59 = icmp eq i64 %57, %58
  br i1 %59, label %60, label %62

60:                                               ; preds = %42
  %61 = load i32, i32* @EC_FWD_MAC_CTRL_TX_VALID, align 4
  br label %63

62:                                               ; preds = %42
  br label %63

63:                                               ; preds = %62, %60
  %64 = phi i32 [ %61, %60 ], [ 0, %62 ]
  %65 = load i32, i32* %3, align 4
  %66 = or i32 %65, %64
  store i32 %66, i32* %3, align 4
  %67 = load i32, i32* %3, align 4
  ret i32 %67
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
